syntax = "proto3";

package extract;

service ExtractService {
  rpc GenerateUserExtract (GenerateUserExtractRequest) returns (GenerateUserExtractResponse) {}
}

message GenerateUserExtractRequest {
  int32 user_id = 1;
}

message GenerateUserExtractResponse {
  string url = 1;
}